Bug 327472 - kwin forgets window shortcut after changing window rules.
Summary: kwin forgets window shortcut after changing window rules.
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: rules (other bugs)
Version First Reported In: 4.11.2
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://git.reviewboard.kde.org/r/113...
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-11 22:09 UTC by Thiago Jung Bauermann
Modified: 2013-11-24 14:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.4
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thiago Jung Bauermann 2013-11-11 22:09:41 UTC
When adding or changing window rules, a shortcut which is already set is forgotten.

Reproducible: Always

Steps to Reproduce:
1. Open a console window and set a shortcut for it (e.g., Alt + F12).
2. Create or modify a window rule for any window, it doesn't have to be the konsole window.
3. Notice that the shortcut that was set in step 1 is gone.
Actual Results:  
The window shortcut is forgotten.

Expected Results:  
Window shortcuts shouldn't change.

I think this started to happen recently, probably in 4.10 or 4.11. But I'm not sure.
Comment 1 Thomas Lübking 2013-11-11 23:21:16 UTC
https://git.reviewboard.kde.org/r/113807/
Comment 2 Thomas Lübking 2013-11-24 14:28:29 UTC
Git commit 4c6995527a62eafe4540cffbf5bddf8e08e49161 by Thomas Lübking.
Committed on 11/11/2013 at 23:20.
Pushed by luebking into branch 'KDE/4.11'.

fix shortcut available check

and bypass idempotent shortcut setting
FIXED-IN: 4.11.4
REVIEW: 113807

M  +5    -1    kwin/useractions.cpp

http://commits.kde.org/kde-workspace/4c6995527a62eafe4540cffbf5bddf8e08e49161